# onto

./: .gitignore  CITATION.CFF  CITATION.cff  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_accuracy.py  benchmark_speed.py  benchmark_tokens.py  formatters.py  generators.py  requirements.txt
benchmarks/results/: iot_telemetry_5.json  iot_telemetry_5.onto  iot_telemetry_5.toon  iot_telemetry_5.yaml  log_entries_5.json  log_entries_5.onto  log_entries_5.toon  log_entries_5.yaml  results_accuracy_2026-04-16_160556_runs_1.json  results_accuracy_2026-04-16_160926_runs_5.json  results_accuracy_2026-04-16_164759.json  results_iot_telemetry_2026-04-16_184729_100_records.json  results_iot_telemetry_2026-04-16_184729_500_records.json  results_iot_telemetry_2026-04-16_184730_1000_records.json  results_iot_telemetry_2026-04-18_183829_5_records.json  results_log_entries_2026-04-16_184731_1000_records.json  results_log_entries_2026-04-16_184731_100_records.json  results_log_entries_2026-04-16_184731_500_records.json  results_log_entries_2026-04-18_184219_5_records.json  results_speed_2026-04-16_153854.json  results_speed_2026-04-16_154355.json  results_speed_2026-04-16_181452.json  results_system_metrics_2026-04-16_184730_100_records.json  results_system_metrics_2026-04-16_184730_500_records.json  results_system_metrics_2026-04-16_184731_1000_records.json  (+5 more)
onto/: __init__.py  errors.py  parser.py  serializer.py
paper/: onto_paper_v1.tex  onto_paper_v4.tex
spec/: ONTO_SPEC_V1.md
tests/: test_integration.py  test_onto.py  test_parser.py  test_serializer.py
